force-app/main/default/objects/custom_create305__c/custom_create305__c.object-meta.xml
<CustomObject>
    <label>Custom created object305</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects305</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>