force-app/main/default/objects/custom_create305__c/fields/custom_create_305field520__c.field-meta.xml
<CustomField>
    <fullName>custom_create_305field520__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 305field520</label>
    <type>Checkbox</type>
</CustomField>